crates/aion-awl/tests/fixtures/rev2/step-bodies/invalid/pipe_route_unknown_outcome.awl
//! Route the shout somewhere that does not exist.
workflow pipe_route_unknown_outcome
  input name: String
  outcome shouted: type Shouted, route success

type Greeting { greeting: String }
type Shouted  { text: String }

worker voice
  action greet(name: String) -> Greeting
  action shout(text: String) -> Shouted

step greet
  greet(name: name) -> greeting

step shout
  shout(text: greeting.greeting) -> loud
  // defect: no outcome or step named `finished`
  loud |> route finished
